objects/nFORCE__Audit_Log__c.object
<CustomObject>
    <description>This Object is used to store nCino audit logs</description>
    <fields>
        <fullName>nFORCE__Context__c</fullName>
        <description>The system populates this field to store the audit log initiator.</description>
        <label>Context</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>The system populates this field to store additional log details.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__IP_Address__c</fullName>
        <description>The system populates this field to store the user&apos;s IP address.</description>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Log_DateTime__c</fullName>
        <description>The system populates this field to store the log creation timestamp.</description>
        <label>Log DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__Type__c</fullName>
        <description>The system populates this field to store the audit log type.</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this field to map the audit log to the associated user.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Log_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit Log</label>
    <nameField>
        <label>Audit Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>